--- a/Challenge/flusync-analytics.html
+++ b/Challenge/flusync-analytics.html
@@ -65,9 +65,9 @@
                                 <div class="firstChartone-slider-content">
                                     <button id="oneDay">1d</button>
                                     <button id="oneWeek">1w</button>
-                                    <button id="oneMonth">1m</button>
-                                    <button id="oneYear" class="active">1y</button>
-                                    <button id="allTime">All</button>
+                                    <button id="oneMonth" class="active">1m</button>
+                                    <button id="oneYear" >1y</button>
+                                    <button id="allTime" >All</button>
                                 </div>
                             </div>
                         </div>
