--- a/Challenge/flusync-teams.html
+++ b/Challenge/flusync-teams.html
@@ -59,7 +59,7 @@
                 <div class="Team-Cards" id="teamCards">
                     <div class="Frontend-team teams">
                         <h4><span style="font-size: 17px;" class="fas fa-pen-nib"></span> Frontend Team</h4>
-                        <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        <a href="flusync-frontend.html"><span class="fas fa-arrow-right"></span></a>
                         <div class="user-img">
                             <img src="IMG/man-in-office.jpg" alt="user">
                             <img class="img-space" src="IMG/woman-in-office.jpg" alt="user">
@@ -246,7 +246,8 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> <div data-category="Research" class="team-member-card">
+                    </div>
+                     <div data-category="Research" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>James Odion</h3>
                         <h5>Pattern Analyst</h5>
@@ -257,7 +258,8 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> <div data-category="Frontend" class="team-member-card">
+                    </div>
+                     <div data-category="Frontend" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>MR. RONNIE</h3>
                         <h5>Lead Ui Engineer</h5>
@@ -268,7 +270,8 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> <div data-category="Financial" class="team-member-card">
+                    </div> 
+                    <div data-category="Financial" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>MR. OKEY</h3>
                         <h5>Financial Director</h5>
@@ -279,7 +282,20 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> <div data-category="Marketing" class="team-member-card">
+                    </div> 
+                    <div data-category="Marketing" class="team-member-card">
+                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
+                        <h3>BEN SHAPIRO</h3>
+                        <h5>UI Developer</h5>
+                        <h4>FRONTEND</h4>
+                        <ul>
+                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
+                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
+                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
+                        </ul> 
+                        <button>Learn More</button>
+                    </div> 
+                    <div data-category="Marketing" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>BEN SHAPIRO</h3>
                         <h5>UI Developer</h5>
@@ -301,7 +317,8 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> <div data-category="Marketing" class="team-member-card">
+                    </div> 
+                    <div data-category="Marketing" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>BEN SHAPIRO</h3>
                         <h5>UI Developer</h5>
@@ -312,18 +329,8 @@
                             <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
                         </ul> 
                         <button>Learn More</button>
-                    </div> <div data-category="Marketing" class="team-member-card">
-                        <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
-                        <h3>BEN SHAPIRO</h3>
-                        <h5>UI Developer</h5>
-                        <h4>FRONTEND</h4>
-                        <ul>
-                            <a class="team-IG" href="#"> <span class="fab fa-instagram-square"></span></a>
-                            <a class="team-FB" href="#"> <span class="fab fa-facebook-square"></span></a>
-                            <a class="team-X" href="#"> <span class=" fab fa-twitter-square"></span></a>
-                        </ul> 
-                        <button>Learn More</button>
-                    </div> <div data-category="Marketing" class="team-member-card">
+                    </div> 
+                    <div data-category="Marketing" class="team-member-card">
                         <img src="IMG/man-in-office.jpg" alt="profile"> <br> <br>
                         <h3>BEN SHAPIRO</h3>
                         <h5>UI Developer</h5>
