--- a/Challenge/flusync-teams.html
+++ b/Challenge/flusync-teams.html
@@ -26,7 +26,7 @@
          <nav>
             <ul class="nav-list">
                 <button id="navHome">
-                    <a href="flusync.html">  <li> <span class="fas fa-home"  style="padding-right:5px;  "></span> Home </li></a>
+                    <a href="index.html">  <li> <span class="fas fa-home"  style="padding-right:5px;  "></span> Home </li></a>
                 </button>
                 <button id="navTeam">
                   <a href="flusync-teams.html">  <li> <span class="fas fa-user-friends" style="padding-right:5px;"></span>Teams</li></a>
