--- a/Challenge/flusync-frontend.html
+++ b/Challenge/flusync-frontend.html
@@ -25,7 +25,7 @@
           <nav>
             <ul class="nav-list">
                 <button >
-                    <a href="flusync.html">  <li> <span class="fas fa-home nav-icon"></span> <span class="nav-text">Home</span> </li></a>
+                    <a href="index.html">  <li> <span class="fas fa-home nav-icon"></span> <span class="nav-text">Home</span> </li></a>
                 </button>
                 <button id="navGoal">
                   <a href="flusync-teams.html" >  <li> <span class="fas fa-user-friends nav-icon" ></span> <span class="nav-text">Teams</span></li></a>
